@@ -269,7 +269,8 @@ cr_style_set_style_from_decl (CRStyle *a_this, CRDeclaration *a_decl) ;
 
 enum CRStatus
 cr_style_to_pango_font_attributes (CRStyle *a_style,
-                                   PangoAttrList *a_pgo_attrs) ;
+                                   PangoAttrList *a_pgo_attrs,
+                                   gulong text_len) ;
 enum CRStatus
 cr_style_ref (CRStyle *a_this) ;
 
