@@ -79,7 +79,6 @@ const char * gv_cssbuf=
 " overflow:auto;                                             "
 " background-color:#eee;                                     "
 " /*font: 12px verdana;*/                                    "
-" font-zise: 12px;                                           "
 " font-style: font-family ;                                  "
 " font-style: normal;                                        "
 "}                                                           "
@@ -106,6 +105,7 @@ const char * gv_cssbuf=
 "        margin-top:10px;                                    "
 "        background-color:#eee;                              "
 "        font-weight:bold;                                   "
+"        font-size: 12px;                                    "
 "}                                                           "
 "                                                            "
 "channel>title                                               "
